[gd_scene load_steps=13 format=2]

[ext_resource path="res://Gfx/Material/WormBody.tres" type="Material" id=1]
[ext_resource path="res://scn/Actor/Enemy/WormBody.gd" type="Script" id=2]

[sub_resource type="SphereMesh" id=9]
radius = 10.0
height = 20.0
radial_segments = 8
rings = 4

[sub_resource type="SphereShape" id=10]
radius = 10.0

[sub_resource type="SphereShape" id=11]
radius = 9.0

[sub_resource type="Gradient" id=7]
colors = PoolColorArray( 0.99, 0.65, 0.46, 1, 1.03, 0.9, 0.52, 1 )

[sub_resource type="GradientTexture" id=8]
gradient = SubResource( 7 )

[sub_resource type="Curve" id=2]
_data = [ Vector2( 0, 1 ), 0.0, 0.0, 0, 0, Vector2( 1, 0 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=3]
curve = SubResource( 2 )

[sub_resource type="ParticlesMaterial" id=4]
emission_shape = 1
emission_sphere_radius = 10.0
direction = Vector3( 0, 0, 1 )
gravity = Vector3( 0, 0, 0 )
initial_velocity = 64.0
damping = 50.0
scale_random = 0.5
scale_curve = SubResource( 3 )
color_ramp = SubResource( 8 )

[sub_resource type="SpatialMaterial" id=5]
flags_unshaded = true
flags_vertex_lighting = true
flags_do_not_receive_shadows = true
flags_disable_ambient_light = true
vertex_color_use_as_albedo = true
albedo_color = Color( 0.88, 0.88, 0.88, 1 )

[sub_resource type="SphereMesh" id=6]
material = SubResource( 5 )
radial_segments = 4
rings = 1

[node name="WormBody" type="KinematicBody"]
collision_layer = 4
collision_mask = 0
script = ExtResource( 2 )

[node name="WormBody" type="MeshInstance" parent="."]
mesh = SubResource( 9 )
material/0 = ExtResource( 1 )

[node name="Hitbox" type="CollisionShape" parent="."]
visible = false
shape = SubResource( 10 )

[node name="ShakeDetect" type="Area" parent="."]
monitorable = false
collision_layer = 0
collision_mask = 67

[node name="Hitbox" type="CollisionShape" parent="ShakeDetect"]
shape = SubResource( 11 )

[node name="Dust" type="Particles" parent="."]
emitting = false
amount = 24
explosiveness = 0.75
fixed_fps = 60
process_material = SubResource( 4 )
draw_pass_1 = SubResource( 6 )

[connection signal="body_entered" from="ShakeDetect" to="." method="_on_ShakeDetect_body_entered"]
[connection signal="body_exited" from="ShakeDetect" to="." method="_on_ShakeDetect_body_exited"]
